--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -13,6 +13,23 @@
     </ion-toolbar>
   </ion-header>
 
+  <ion-content>
+    <ion-list>
+      <ion-item *ngFor="let note of notes" (click)="openNote(note)">
+        <ion-label>
+          {{note.title}}
+        </ion-label>
+      </ion-item>
+    </ion-list>
+
+    <ion-fab vertical="bottom" horizontal="end" slot="fixed">
+      <ion-fab-button (click)="addNote()">
+        <ion-icon name="add"></ion-icon>
+      </ion-fab-button>
+    </ion-fab>
+
+  </ion-content>
+
   <div id="container">
     <strong>Ready to create an app?</strong>
     <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
