--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,19 +1,123 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Blank
+      Mental Shower Survey
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
-    </ion-toolbar>
-  </ion-header>
+    <ion-header collapse="condense">
+      <ion-toolbar>
+        <ion-title size="large">Mental Shower Survey</ion-title>
+      </ion-toolbar>
+    </ion-header>
+  
 
-  <ion-content>
+<h3>User</h3>
+<ul>
+  <li>ID: {{user.id}}</li>
+  <li>Gender: {{user.gender}}</li>
+  <li>Temperature: {{user.temperature}}</li>
+  <li>Air Quality: {{user.airquality}}</li>
+  <li>Humidity: {{user.humidity}}</li>
+</ul>
+
+<div id="gender-selection" *ngIf="stage==1">
+  <ion-list>
+    <ion-item class="color-1" (click)="answer('gender', 1)">
+      <ion-label><ion-icon name="female-outline"></ion-icon> Female</ion-label>
+    </ion-item>
+    <ion-item class="color-2" (click)="answer('gender', 2)">
+      <ion-label><ion-icon name="male-outline"></ion-icon> Male</ion-label>
+    </ion-item>
+    <ion-item class="color-3" (click)="answer('gender', 3)">
+      <ion-label><ion-icon name="male-female-outline"></ion-icon> Non-binary</ion-label>
+    </ion-item>
+    <ion-item class="color-4" (click)="answer('gender', 4)">
+      <ion-label><ion-icon name="person-outline"></ion-icon> Rather not say</ion-label>
+    </ion-item>
+</ion-list>
+</div>
+
+
+<div id="temperature-selection" *ngIf="stage==2">
+  <h3>Temperature</h3>
+  <ion-list>
+      <ion-item class="color-1" (click)="answer('temperature', 1)">
+        <ion-label>Very warm</ion-label>
+      </ion-item>
+      <ion-item class="color-2" (click)="answer('temperature', 2)">
+        <ion-label>A little warm</ion-label>
+      </ion-item>
+      <ion-item class="color-3" (click)="answer('temperature', 3)">
+        <ion-label>Warm</ion-label>
+      </ion-item>
+      <ion-item class="color-4" (click)="answer('temperature', 4)">
+        <ion-label>Cold</ion-label>
+      </ion-item>
+      <ion-item class="color-5" (click)="answer('temperature', 5)">
+        <ion-label>A little cold</ion-label>
+      </ion-item>
+      <ion-item class="color-6" (click)="answer('temperature', 6)">
+        <ion-label>Very cold</ion-label>
+      </ion-item>
+  </ion-list>
+</div>
+<div id="airquality-selection" *ngIf="stage==3">
+  <h3>Air Quality</h3>
+  <ion-list>
+    <ion-item class="color-1" (click)="answer('airquality', 1)">
+      <ion-label>Very fresh</ion-label>
+    </ion-item>
+    <ion-item class="color-2" (click)="answer('airquality', 2)">
+      <ion-label>Fresh enough</ion-label>
+    </ion-item>
+    <ion-item class="color-3" (click)="answer('airquality', 3)">
+      <ion-label>Fresh</ion-label>
+    </ion-item>
+    <ion-item class="color-4" (click)="answer('airquality', 4)">
+      <ion-label>Musty</ion-label>
+    </ion-item>
+    <ion-item class="color-5" (click)="answer('airquality', 5)">
+      <ion-label>A little musty</ion-label>
+    </ion-item>
+    <ion-item class="color-6" (click)="answer('airquality', 6)">
+      <ion-label>Very musty</ion-label>
+    </ion-item>
+</ion-list>
+</div>
+<div id="humidity-selection" *ngIf="stage==4">
+  <h3>Humidity</h3>
+  <ion-list>
+    <ion-item class="color-1" (click)="answer('humidity', 1)">
+      <ion-label>Very dry</ion-label>
+    </ion-item>
+    <ion-item class="color-2" (click)="answer('humidity', 2)">
+      <ion-label>Too dry</ion-label>
+    </ion-item>
+    <ion-item class="color-3" (click)="answer('humidity', 3)">
+      <ion-label>Dry</ion-label>
+    </ion-item>
+    <ion-item class="color-4" (click)="answer('humidity', 4)">
+      <ion-label>Damp</ion-label>
+    </ion-item>
+    <ion-item class="color-5" (click)="answer('humidity', 5)">
+      <ion-label>Too damp</ion-label>
+    </ion-item>
+    <ion-item class="color-6" (click)="answer('humidity', 6)">
+      <ion-label>Very damp</ion-label>
+    </ion-item>
+</ion-list>
+</div>
+<div id="thankyou-confirmation" *ngIf="stage==5">
+  <h3>Thank you</h3>
+</div>
+
+
+
+<div *ngIf="false">
+<h2>Working Prototype</h2>
     <ion-list>
       <ion-item *ngFor="let note of notes" (click)="openNote(note)">
         <ion-label>
@@ -22,16 +126,24 @@
       </ion-item>
     </ion-list>
 
+
     <ion-fab vertical="bottom" horizontal="end" slot="fixed">
       <ion-fab-button (click)="addNote()">
         <ion-icon name="add"></ion-icon>
       </ion-fab-button>
     </ion-fab>
 
-  </ion-content>
+
+ 
+    
+  </div>
+
 
   <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
+   
+  
+  
   </div>
 </ion-content>
+
+
