--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -25,3 +25,36 @@
 #container a {
   text-decoration: none;
 }
+
+.gender-button ion-icon {
+  margin-right: 1rem;
+}
+
+
+#gender-selection ion-item {--ion-background-color: #5e0053 !important; color: #ffffff !important;}
+
+#temperature-selection ion-item {color: #ffffff !important;}
+#temperature-selection .color-1 {--ion-background-color: #fd0c0d !important;}
+#temperature-selection .color-2 {--ion-background-color: #dd495b !important;}
+#temperature-selection .color-3 {--ion-background-color: #b95f88 !important;}
+#temperature-selection .color-4 {--ion-background-color: #8b6ab7 !important;}
+#temperature-selection .color-5 {--ion-background-color: #5f6bdd !important;}
+#temperature-selection .color-6 {--ion-background-color: #2267fd !important;}
+
+#airquality-selection ion-item {color: #ffffff !important;}
+#airquality-selection .color-1 {--ion-background-color: #b4eca3 !important;}
+#airquality-selection .color-2 {--ion-background-color: #b3df8e !important;}
+#airquality-selection .color-3 {--ion-background-color: #b0cf77 !important;}
+#airquality-selection .color-4 {--ion-background-color: #acbd59 !important;}
+#airquality-selection .color-5 {--ion-background-color: #a9ae3e !important;}
+#airquality-selection .color-6 {--ion-background-color: #a6a21f !important;}
+
+
+#humidity-selection ion-item {color: #ffffff !important;}
+#humidity-selection .color-1 {--ion-background-color: #ee8c1d !important;}
+#humidity-selection .color-2 {--ion-background-color: #cd8b42 !important;}
+#humidity-selection .color-3 {--ion-background-color: #ad8854 !important;}
+#humidity-selection .color-4 {--ion-background-color: #7e8267 !important;}
+#humidity-selection .color-5 {--ion-background-color: #537b71 !important;}
+#humidity-selection .color-6 {--ion-background-color: #1b7479 !important;}
+
