--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -14,14 +14,17 @@
     </ion-header>
   
 
-<h3>User</h3>
+<h3>Current User Data</h3>
 <ul>
-  <li>ID: {{user.id}}</li>
+  <li>userId: {{user.id}}</li>
+  <li>dateTime: {{user.dateTime}}</li>
   <li>Gender: {{user.gender}}</li>
+  <li>Zone: {{user.zone}}</li>
   <li>Temperature: {{user.temperature}}</li>
   <li>Air Quality: {{user.airquality}}</li>
   <li>Humidity: {{user.humidity}}</li>
 </ul>
+
 
 <div id="gender-selection" *ngIf="stage==1">
   <ion-list>
@@ -112,35 +115,32 @@
 </div>
 <div id="thankyou-confirmation" *ngIf="stage==5">
   <h3>Thank you</h3>
+
 </div>
 
 
 
-<div *ngIf="false">
-<h2>Working Prototype</h2>
-    <ion-list>
-      <ion-item *ngFor="let note of notes" (click)="openNote(note)">
-        <ion-label>
-          {{note.title}}
-        </ion-label>
-      </ion-item>
-    </ion-list>
+<ion-content>
+  <h3>Stored User Data from Firestore</h3>
+  <ion-list>
+    <ion-item *ngFor="let storedAnswer of storedAnswers">
+      <ion-label><strong>Firestore docId:</strong> {{storedAnswer.id}}</ion-label>
+      <ion-label><strong>userId:</strong> {{storedAnswer.userId}}</ion-label>
+      <ion-label><strong>gender:</strong> {{storedAnswer.gender}}</ion-label>
+      <ion-label><strong>dateTime:</strong> {{storedAnswer.dateTime}}</ion-label>
+      <ion-label><strong>temperature:</strong> {{storedAnswer.temperature}}</ion-label>
+      <ion-label><strong>airquality:</strong> {{storedAnswer.airquality}}</ion-label>
+      <ion-label><strong>humidity:</strong> {{storedAnswer.humidity}}</ion-label>
 
 
-    <ion-fab vertical="bottom" horizontal="end" slot="fixed">
-      <ion-fab-button (click)="addNote()">
-        <ion-icon name="add"></ion-icon>
-      </ion-fab-button>
-    </ion-fab>
+    </ion-item>
+  </ion-list>
 
-
- 
-    
-  </div>
+</ion-content>
 
 
   <div id="container">
-   
+
   
   
   </div>
