--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -17,7 +17,7 @@
 <h3>Current User Data</h3>
 <ul>
   <li>userId: {{user.id}}</li>
-  <li>dateTime: {{user.dateTime}}</li>
+  <li>timecode: {{user.timecode}}</li>
   <li>Gender: {{user.gender}}</li>
   <li>Zone: {{user.zone}}</li>
   <li>Temperature: {{user.temperature}}</li>
@@ -127,7 +127,7 @@
       <ion-label><strong>Firestore docId:</strong> {{storedAnswer.id}}</ion-label>
       <ion-label><strong>userId:</strong> {{storedAnswer.userId}}</ion-label>
       <ion-label><strong>gender:</strong> {{storedAnswer.gender}}</ion-label>
-      <ion-label><strong>dateTime:</strong> {{storedAnswer.dateTime}}</ion-label>
+      <ion-label><strong>timecode:</strong>{{storedAnswer.timecode}}</ion-label>
       <ion-label><strong>temperature:</strong> {{storedAnswer.temperature}}</ion-label>
       <ion-label><strong>airquality:</strong> {{storedAnswer.airquality}}</ion-label>
       <ion-label><strong>humidity:</strong> {{storedAnswer.humidity}}</ion-label>
