--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -24,14 +24,16 @@
   <li>Air Quality: {{user.airquality}}</li>
   <li>Humidity: {{user.humidity}}</li>
 </ul>
+
 <ul class="items">
-  YOU ARE IN ZONE NUMBER {{zoneId}}
+  YOU ARE IN ZONE NUMBER {{user.zone}}
   <li (click)="onSelect(zone)" *ngFor="let zone of zones" >
     
     ID:{{zone.id}} --- NAME: {{zone.name}}
     
   </li>
 </ul>
+
 
 
 <div id="gender-selection" *ngIf="stage==1">
@@ -135,7 +137,8 @@
       <ion-label><strong>Firestore docId:</strong> {{storedAnswer.id}}</ion-label>
       <ion-label><strong>userId:</strong> {{storedAnswer.userId}}</ion-label>
       <ion-label><strong>gender:</strong> {{storedAnswer.gender}}</ion-label>
-      <ion-label><strong>timecode:</strong>{{storedAnswer.timecode}}</ion-label>
+      <ion-label><strong>timecode:</strong> {{storedAnswer.timecode}}</ion-label>
+      <ion-label><strong>zone:</strong> {{storedAnswer.zone}}</ion-label>
       <ion-label><strong>temperature:</strong> {{storedAnswer.temperature}}</ion-label>
       <ion-label><strong>airquality:</strong> {{storedAnswer.airquality}}</ion-label>
       <ion-label><strong>humidity:</strong> {{storedAnswer.humidity}}</ion-label>
