--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -7,6 +7,7 @@
   top: 50%;
   transform: translateY(-50%);
 }
+#container ul li {list-style-type: none; text-align: left;}
 
 #container strong {
   font-size: 20px;
