--- a/src/global.scss
+++ b/src/global.scss
@@ -24,3 +24,22 @@
 @import "~@ionic/angular/css/text-alignment.css";
 @import "~@ionic/angular/css/text-transformation.css";
 @import "~@ionic/angular/css/flex-utils.css";
+
+
+div.spacer {
+    padding: 2rem;
+}
+#container {
+    text-align: center;
+  
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 50%;
+    transform: translateY(-50%);
+  }
+
+  .large-number {
+      font-size: 4rem;
+      text-align: center;
+  }
