didyouknow component created

--- a/src/app/stats/stats.component.html
+++ b/src/app/stats/stats.component.html
@@ -4,7 +4,8 @@
 
 <div class="spacer"></div>
 <h1>Statistics Dashboard</h1>
-
+{{getAnswersByZone(1)}}
+<ion-button (click)="getAnswersByZone(1)">getAnswersByZone</ion-button>
 <ion-grid>
 <ion-row>
 <ion-col>
