--- a/src/app/didyouknow/didyouknow.component.scss
+++ b/src/app/didyouknow/didyouknow.component.scss
@@ -1,32 +1,54 @@
 .container {
-    width: 300px;
-    height: 180px;
+/*  width: 300px;
+  height: 280px;
+*/  
+
     display: block;
     position: relative;
     perspective: 800px;
     border-radius: 4px;
   }
+
+/*
+  ion-card-content {
+    --offset-top: 0 !important;
+    max-height: calc(100% - #{50px});
+    position: relative;
+    overflow: hidden;
+    overflow-y: auto;
+    ::-webkit-scrollbar {
+      display: none;
+    }
+  }
+*/
+
+  ion-card {
+    text-align: left;
+ //   width: 300px;
+//    height: 300px;
+  }
+
   
   .card {
-    margin: 100px;
+  /*  margin: 100px; */
     width: 100%;
     height: 100%;
-    position: absolute;
+   position: absolute;
     transform-style: preserve-3d;
     transition: transform 0.8s cubic-bezier(0.175, 0.885, 0.32, 1.275);
     border-radius: 6px;
-    box-shadow: 0 6px 16px rgba(0, 0, 0, 0.15);
+/*    box-shadow: 0 6px 16px rgba(0, 0, 0, 0.15); */
     box-sizing: border-box;
   }
   
   .card .front,
   .card .back {
-    position: absolute;
+  position: absolute;
     width: 100%;
     height: 100%;
     backface-visibility: hidden;
     border-radius: 6px;
-    background-color: #128bea;
+    background-color: transparent;
     color: #fff;
     display: grid;
     place-items: center;
