--- a/src/global.scss
+++ b/src/global.scss
@@ -81,3 +81,8 @@ ion-label {color: #000000; font-weight: bold;}
 .humidity-selection .color-5 {--ion-background-color: #537b71 !important; background-color: #537b71 !important;}
 .humidity-selection .color-6 {--ion-background-color: #1b7479 !important; background-color: #1b7479 !important;}
 
+
+
+h1,h2,h3,h4,h5,h6 {
+    color: #000000 !important;
+}
