--- a/src/app/cardgame/cardgame.component.html
+++ b/src/app/cardgame/cardgame.component.html
@@ -2,40 +2,59 @@
 
 <div class="spacer"></div>
 <div id="container">
+<ion-grid>
+  <ion-row>
+    <ion-col size-md="6" offset-md="3">
 
-  <div [ngClass]="cardTurned ? 'flipped' : ''" class="card">
-    <ion-card *ngIf="!cardTurned" class="card-front" (click)="turnCard()">
-      <ion-card-header>
-        <ion-card-subtitle>Did you know</ion-card-subtitle>
-        <ion-card-title>{{cards[currentCard].header}}</ion-card-title>
-      </ion-card-header>
-      <ion-card-content>
-        {{cards[currentCard].text}}
-      </ion-card-content>
-    </ion-card>
+
+
+
+
+      <div [ngClass]="cardTurned ? 'flipped' : ''" class="card">
+        <ion-card *ngIf="!cardTurned" class="card-front" (click)="turnCard()">
+          <ion-card-header>
+            <ion-card-subtitle>Did you know</ion-card-subtitle>
+            <ion-card-title>{{cards[currentCard].header}}</ion-card-title>
+          </ion-card-header>
+          <ion-card-content>
+            {{cards[currentCard].text}}
+          </ion-card-content>
+        </ion-card>
+      
+        <ion-card *ngIf="cardTurned" class="card-back">
+          <ion-card-header>
+            <ion-card-subtitle>Pick a category</ion-card-subtitle>
+            <ion-card-title>{{cards[currentCard].question}}</ion-card-title>
+          </ion-card-header>
+          <ion-card-content *ngIf="answerIsCorrect==0">
+            <ion-button (click)="cardAnswer('Temperature')">Temperature</ion-button>
+            <ion-button (click)="cardAnswer('Air Quality')">Air Quality</ion-button>
+            <ion-button (click)="cardAnswer('Humidity')">Humidity</ion-button>
+          </ion-card-content>
+          <ion-card-content *ngIf="answerIsCorrect==1">
+            <div class="large-text">Correct!</div><div> {{cards[currentCard].answer}} does.</div>
+          </ion-card-content>
+          <ion-card-content *ngIf="answerIsCorrect==2">
+            <div class="large-text">Wrong!</div><div> Better luck next time.</div>
+          </ion-card-content>
+          <ion-card-content *ngIf="answerIsCorrect!=0">
+            <ion-button (click)="newCard()">Try a new card</ion-button>
+          </ion-card-content>
+        
+        </ion-card>
+      </div><!-- .card -->
+
+
+
+
+
+
+    </ion-col>
+  </ion-row>
+</ion-grid>
+
+
   
-    <ion-card *ngIf="cardTurned" class="card-back">
-      <ion-card-header>
-        <ion-card-subtitle>Pick a category</ion-card-subtitle>
-        <ion-card-title>{{cards[currentCard].question}}</ion-card-title>
-      </ion-card-header>
-      <ion-card-content *ngIf="answerIsCorrect==0">
-        <ion-button (click)="cardAnswer('Temperature')">Temperature</ion-button>
-        <ion-button (click)="cardAnswer('Air Quality')">Air Quality</ion-button>
-        <ion-button (click)="cardAnswer('Humidity')">Humidity</ion-button>
-      </ion-card-content>
-      <ion-card-content *ngIf="answerIsCorrect==1">
-        <div class="large-text">Correct!</div><div> {{cards[currentCard].answer}} does.</div>
-      </ion-card-content>
-      <ion-card-content *ngIf="answerIsCorrect==2">
-        <div class="large-text">Wrong!</div><div> Better luck next time.</div>
-      </ion-card-content>
-      <ion-card-content *ngIf="answerIsCorrect!=0">
-        <ion-button (click)="newCard()">Try a new card</ion-button>
-      </ion-card-content>
-    
-    </ion-card>
-  </div><!-- .card -->
 
 <div class="spacer"></div>
 <ion-card>
