button round and all questions

--- a/src/app/cardgame/cardgame.component.html
+++ b/src/app/cardgame/cardgame.component.html
@@ -1,74 +1,82 @@
 <ion-content class="ion-padding">
 
-<div class="spacer"></div>
-<div id="container">
-<ion-grid>
-  <ion-row>
-    <ion-col size-md="6" offset-md="3">
+    <div class="spacer"></div>
+    <div id="container">
+        <ion-grid>
+            <ion-row>
+                <ion-col size-md="6" offset-md="3">
 
 
 
 
 
-      <div [ngClass]="cardTurned ? 'flipped' : ''" class="card">
-        <ion-card *ngIf="!cardTurned" class="card-front" (click)="turnCard()">
-          <ion-card-header>
-            <ion-card-subtitle>Did you know</ion-card-subtitle>
-            <ion-card-title>{{cards[currentCard].header}}</ion-card-title>
-          </ion-card-header>
-          <ion-card-content>
-            {{cards[currentCard].text}}
-          </ion-card-content>
+                    <div [ngClass]="cardTurned ? 'flipped' : ''" class="card">
+                        <ion-card *ngIf="!cardTurned" class="card-front" (click)="turnCard()">
+                            <ion-card-header>
+                                <ion-card-subtitle>Did you know</ion-card-subtitle>
+                                <ion-card-title>{{cards[currentCard].header}}</ion-card-title>
+                            </ion-card-header>
+                            <ion-card-content>
+                                {{cards[currentCard].text}}
+                            </ion-card-content>
+                        </ion-card>
+
+                        <ion-card *ngIf="cardTurned" class="card-back">
+                            <ion-card-header>
+                                <ion-card-subtitle>Pick a category</ion-card-subtitle>
+                                <ion-card-title>{{cards[currentCard].question}}</ion-card-title>
+                            </ion-card-header>
+                            <ion-card-content *ngIf="answerIsCorrect==0">
+                                <ion-button class="buton" shape="round" (click)="cardAnswer('Temperature')">
+                                    <ion-icon name="thermometer"></ion-icon> Temperature</ion-button>
+                                <ion-button class="buton" shape="round" (click)="cardAnswer('Air Quality')">
+                                    <ion-icon name="partly-sunny"></ion-icon> Air Quality</ion-button>
+                                <ion-button class="buton" shape="round" (click)="cardAnswer('Humidity')">
+                                    <ion-icon name="water"></ion-icon> Humidity</ion-button>
+                            </ion-card-content>
+                            <ion-card-content *ngIf="answerIsCorrect==1">
+                                <div class="large-text">Correct!</div>
+                                <div> {{cards[currentCard].answer}} does.</div>
+                            </ion-card-content>
+                            <ion-card-content *ngIf="answerIsCorrect==2">
+                                <div class="large-text">Wrong!</div>
+                                <div> Better luck next time.</div>
+                            </ion-card-content>
+                            <ion-card-content *ngIf="answerIsCorrect!=0">
+                                <ion-button (click)="newCard()">Try a new card</ion-button>
+                            </ion-card-content>
+
+                        </ion-card>
+                    </div>
+                    <!-- .card -->
+
+
+
+
+
+
+                </ion-col>
+            </ion-row>
+        </ion-grid>
+
+
+
+
+        <div class="spacer"></div>
+        <ion-card>
+            <ion-card-content>
+                <div class="score">
+                    <strong>You have answered {{score}} of {{cards.length}} correctly!</strong>
+                </div>
+                <!-- .score -->
+
+                <div class="completed" *ngIf="isCompleted">
+                    <div class="large-text">You completed all the questions!</div>
+                </div>
+            </ion-card-content>
         </ion-card>
-      
-        <ion-card *ngIf="cardTurned" class="card-back">
-          <ion-card-header>
-            <ion-card-subtitle>Pick a category</ion-card-subtitle>
-            <ion-card-title>{{cards[currentCard].question}}</ion-card-title>
-          </ion-card-header>
-          <ion-card-content *ngIf="answerIsCorrect==0">
-            <ion-button (click)="cardAnswer('Temperature')"><ion-icon name="thermometer"></ion-icon> Temperature</ion-button>
-            <ion-button (click)="cardAnswer('Air Quality')"><ion-icon name="partly-sunny"></ion-icon> Air Quality</ion-button>
-            <ion-button (click)="cardAnswer('Humidity')"><ion-icon name="water"></ion-icon> Humidity</ion-button>
-          </ion-card-content>
-          <ion-card-content *ngIf="answerIsCorrect==1">
-            <div class="large-text">Correct!</div><div> {{cards[currentCard].answer}} does.</div>
-          </ion-card-content>
-          <ion-card-content *ngIf="answerIsCorrect==2">
-            <div class="large-text">Wrong!</div><div> Better luck next time.</div>
-          </ion-card-content>
-          <ion-card-content *ngIf="answerIsCorrect!=0">
-            <ion-button (click)="newCard()">Try a new card</ion-button>
-          </ion-card-content>
-        
-        </ion-card>
-      </div><!-- .card -->
 
-
-
-
-
-
-    </ion-col>
-  </ion-row>
-</ion-grid>
-
-
-  
-
-<div class="spacer"></div>
-<ion-card>
-  <ion-card-content>
-<div class="score">
-<strong>You have answered {{score}} of {{cards.length}} correctly!</strong>
-</div><!-- .score -->
-
-<div class="completed" *ngIf="isCompleted">
-  <div class="large-text">You completed all the questions!</div>
-</div>
-</ion-card-content>
-</ion-card>
-
-</div><!-- #container -->
+    </div>
+    <!-- #container -->
 
 </ion-content>
