cardgame functionality complete. Only missing some more styling and design

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,8 @@
 
   <ion-header [translucent]="true">
     <ion-toolbar>
+      <ion-button routerLink="/cardgame" slot="start">Quiz!</ion-button>
+
       <ion-title routerLink="/home">
         Mental Shower Survey
       </ion-title>
