--- a/src/app/cardgame/cardgame.component.html
+++ b/src/app/cardgame/cardgame.component.html
@@ -2,6 +2,9 @@
 
     <div class="spacer"></div>
     <div id="container">
+
+      <h1>Memory card game!</h1>
+      <p>Click the card to turn it and answer a question!</p>
         <ion-grid>
             <ion-row>
                 <ion-col size-md="6" offset-md="3">
@@ -10,7 +13,7 @@
 
 
 
-                    <div [ngClass]="cardTurned ? 'flipped' : ''" class="card">
+                    <div [ngClass]="cardTurned ? 'flipped' : ''" class="card" *ngIf="!isWon">
                         <ion-card *ngIf="!cardTurned" class="card-front" (click)="turnCard()">
                             <ion-card-header>
                                 <ion-card-subtitle>Did you know</ion-card-subtitle>
@@ -23,10 +26,10 @@
 
                         <ion-card *ngIf="cardTurned" class="card-back">
                             <ion-card-header>
-                                <ion-card-subtitle>Pick a category</ion-card-subtitle>
-                                <ion-card-title>{{cards[currentCard].question}}</ion-card-title>
+                                <ion-card-subtitle *ngIf="!hideHeader">Pick an answer</ion-card-subtitle>
+                                <ion-card-title *ngIf="!hideHeader">{{cards[currentCard].question}}</ion-card-title>
                             </ion-card-header>
-                            <ion-card-content *ngIf="answerIsCorrect==0">
+                            <ion-card-content *ngIf="answerStatus==0">
                                 <ion-button class="buton" shape="round" (click)="cardAnswer('Temperature')">
                                     <ion-icon name="thermometer"></ion-icon> Temperature</ion-button>
                                 <ion-button class="buton" shape="round" (click)="cardAnswer('Air Quality')">
@@ -34,15 +37,15 @@
                                 <ion-button class="buton" shape="round" (click)="cardAnswer('Humidity')">
                                     <ion-icon name="water"></ion-icon> Humidity</ion-button>
                             </ion-card-content>
-                            <ion-card-content *ngIf="answerIsCorrect==1">
+                            <ion-card-content class="correct-answer" *ngIf="answerStatus==1">
                                 <div class="large-text">Correct!</div>
-                                <div> {{cards[currentCard].answer}} does.</div>
+                                <div> {{cards[currentCard].answer}} is the right answer.</div>
                             </ion-card-content>
-                            <ion-card-content *ngIf="answerIsCorrect==2">
+                            <ion-card-content class="wrong-answer" *ngIf="answerStatus==2">
                                 <div class="large-text">Wrong!</div>
                                 <div> Better luck next time.</div>
                             </ion-card-content>
-                            <ion-card-content *ngIf="answerIsCorrect!=0">
+                            <ion-card-content *ngIf="answerStatus!=0">
                                 <ion-button (click)="newCard()">Try a new card</ion-button>
                             </ion-card-content>
 
@@ -66,11 +69,14 @@
         <ion-card>
             <ion-card-content>
                 <div class="score">
-                    <strong>You have answered {{score}} of {{cards.length}} correctly!</strong>
+                  <div class="score-bar">
+                    <div class="score-bar-completed" [style.width.%]="scoreBarCompleted">&nbsp;</div>
+                  </div>
+                    <strong>You have answered {{score}} of {{totalNumberOfCards}} correctly!</strong>
                 </div>
                 <!-- .score -->
 
-                <div class="completed" *ngIf="isCompleted">
+                <div class="completed" *ngIf="isWon">
                     <div class="large-text">You completed all the questions!</div>
                 </div>
             </ion-card-content>
